####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = ktimetrace.1x 

install-data-local:
	$(mkinstalldirs) $(mandir)/man1/
	$(INSTALL_DATA) $(srcdir)/ktimetrace.1x $(mandir)/man1/ktimetrace.1x

uninstall-local:
	-rm -f $(mandir)/man1/ktimetrace.1x

####### kdevelop will overwrite this part!!! (end)############
